// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignPermission render render should correctly render SignPermission component 1`] = `
<screen-stub>
  <v-modal-card-stub isclosable="true">
    <loading-screen-stub isloading="true"></loading-screen-stub>
  </v-modal-card-stub>
</screen-stub>
`;

exports[`SignPermission render render should correctly render SignPermission component 2`] = `
<screen-stub>
  <v-modal-card-stub isclosable="true">
    <sign-password-stub message="" withlogoutbtn="true" requesterurl="http://localhost"></sign-password-stub>
  </v-modal-card-stub>
</screen-stub>
`;
